--- a/about.html
+++ b/about.html
@@ -10,7 +10,25 @@
     </nav>
     <main>
         <h1>About Me</h1>
-        <p>Here is where you can tell the world about yourself.</p>
+        <p>I am a theoretical physicist by training currently working as a Data scientist.
+             Interested in learning and exploring about anything that can be expressed as numbers or equations. </p>
+
+             <p>
+                I am a data scientist by profession. With a strong background in theoretical physics, I've completed 
+                my five year Integrated MSc. from IIT-Roorkee and PhD from HBNI-Mumbai specializing in string theory.
+                Now, I find myself delving into the world of data and numbers.
+             </p>
+             <p>
+                Currently, I am working on analysing time series data for supply chain management.
+                My work focuses on understanding trends and making predictions to optimize various aspects of supply chain processes.
+             </p>
+             <p>
+                Apart from this, I have a keen interest in quantitative finance. I believe that my interest in numbers and equations, fostered by my physics background, complements my curiosity in the financial domain.
+             </p>
+             <p>
+                I look forward to learning, exploring, and delving deeper into anything that can be expressed as numbers or equations. 
+             </p>
+            
     </main>
     <footer>
         <!-- Same footer as above -->
