header footer chanes

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             
     </main>
     <footer>
-        <!-- Same footer as above -->
+        <p>© [2023], [Pranjal Pandey]</p>
     </footer>
 </body>
 </html>
