--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Same head section as above -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Contact - My Personal Webpage</title>
 </head>
 <body>
     <nav>
-        <!-- Same navigation links as above -->
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <main>
         <h1>Contact Me</h1>
@@ -24,7 +30,7 @@
         </form>
     </main>
     <footer>
-        <!-- Same footer as above -->
+        <p>© [2023], [Pranjal Pandey]</p>
     </footer>
 </body>
 </html>
