--- a/projects.html
+++ b/projects.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Same head section as above -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Projects - My Personal Webpage</title>
 </head>
 <body>
     <nav>
-        <!-- Same navigation links as above -->
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
     </nav>
     <main>
         <h1>My Projects</h1>
-        <p>Details of your projects can go here.</p>
+        
     </main>
     <footer>
-        <!-- Same footer as above -->
+        <p>© [2023], [Pranjal Pandey]</p>
     </footer>
 </body>
 </html>
