--- a/index.html
+++ b/index.html
@@ -17,6 +17,37 @@
     <main>
         <h1>Welcome to My Personal Webpage</h1>
         <p>Home to all things me.</p>
+
+        <h2>Find Me At</h2>
+        <ul>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/pranjal-pandey-1a78b860/">linkedin.com/in/pranjal-pandey-1a78b860/</a></li>
+            <li>GitHub: <a href="https://github.com/pranofgit">github.com/pranofgit</a></li>
+            <li>Physics Research: <a href="https://inspirehep.net/authors/1755066?ui-citation-summary=true">inspirehep/authors/pranjal-pandey</a></li>
+        </ul>
+
+        <h2>Research</h2>
+        <ul>
+            <li>My work has been published in two of the most esteemed journals in the field:
+                <ul>
+                    <li><a href="https://link.aps.org/doi/10.1103/PhysRevD.101.106014">Conformal properties of soft-operators : Use of null-states, Phys. Rev. D</a></li>
+                    <li><a href="https://doi.org/10.1007/JHEP03(2020)125">Modified celestial amplitude in Einstein gravity, JHEP</a></li>
+                    <li><a href="https://doi.org/10.1007/JHEP02(2020)067">Conformal properties of soft operators - 2 : Use of null-states, JHEP</a></li>
+                </ul>
+            </li>
+            <li>My work, acclaimed as original and effective, is frequently cited by leading groups in the field at Harvard, Princeton, Oxford, Cambridge, Brown, and other prestigious institutions.</li>
+            <li>I have presented my work at a range of national and international conferences, such as the renowned Kavli conference in Japan and the Celestial Holography conference at Princeton.</li>
+        </ul>
+
+        <h2> Data Science</h2>
+        
+        <h3>Data Scientist (2022 - Present)</h3>
+        <ul>
+            <li>Future Demand and Purchase Order Recommendation: Lead a team of three to build a forecasting and recommendation system for a company with multiple warehouses in North America.</li>
+            <li>Statistical Analysis: Developed and automated feature selection processes to aid in fundamental financial analysis for a research subsidiary of a large financial services corporation.</li>
+            <li>Image segmentation and classification: Conducted quantization and evaluated the performance of segmentation models, enabling their effective deployment in an iOS application for a healthcare research company.</li>
+        </ul>
+
+
     </main>
     <footer>
         <p>© [2023], [Pranjal Pandey]</p>
