--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <li>I have presented my work at a range of national and international conferences, such as the renowned Kavli conference in Japan and the Celestial Holography conference at Princeton.</li>
         </ul>
 
-        <h2> Data Science</h2>
+        <h2> Data Science Experience</h2>
+        <h3></h3>
         
         <h3>Data Scientist (2022 - Present)</h3>
         <ul>
@@ -47,6 +48,29 @@
             <li>Image segmentation and classification: Conducted quantization and evaluated the performance of segmentation models, enabling their effective deployment in an iOS application for a healthcare research company.</li>
         </ul>
 
+        <h2>Academics</h2>
+
+            <h3>Education</h3>
+            <ul>
+                <li><strong>2018-2022:</strong> PhD Physics, Advisor Prof. Shamik Banerjee, HBNI, Mumbai (Department of Atomic Energy, India)</li>
+                <li><strong>2017-2018:</strong> MPhil Physics, Institute of Physics Bhubaneswar</li>
+                <li><strong>2011-2016:</strong> Integrated MSc. Physics, Indian Institute of Technology-Roorkee</li>
+            </ul>
+
+            <h3>Scholarship/Fellowships</h3>
+            <ul>
+                <li>PhD fellowship from 2017-2022, awarded by Department of Atomic Energy-India</li>
+                <li>Qualified for Research Fellowship in 2016, awarded by Council of Scientific & Industrial Research-India</li>
+                <li>INSPIRE scholarship from 2011-2016, awarded by Department of Science & Technology-India</li>
+            </ul>
+
+            <h3>Others</h3>
+            <ul>
+                <li>Joint Entrance Screening Test(JEST-2017)- 99.77 percentile, rank 13.</li>
+                <li>Graduate record test (GRE): physics- 93 percentile.</li>
+                <li>Graduate record test (GRE): quantitative reasoning- 98 percentile, verbal reasoning- 96 percentile.</li>
+                <li>Qualified IIT-JEE 2011.</li>
+            </ul>
 
     </main>
     <footer>
