about me projects

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         </ul>
 
         <h2> Data Science Experience</h2>
-        <h3></h3>
         
         <h3>Data Scientist (2022 - Present)</h3>
         <ul>
@@ -47,6 +46,25 @@
             <li>Statistical Analysis: Developed and automated feature selection processes to aid in fundamental financial analysis for a research subsidiary of a large financial services corporation.</li>
             <li>Image segmentation and classification: Conducted quantization and evaluated the performance of segmentation models, enabling their effective deployment in an iOS application for a healthcare research company.</li>
         </ul>
+
+        <h3>Self-Projects in Data Science</h3>
+
+            <h4>Machine Learning in Conformal Field Theory</h4>
+            <ul>
+                <li>Applied machine learning for classification and regression tasks in conformal field theory, used to describe systems at the point of phase transition.</li>
+                <li>Created models to classify functions based on the presence or absence of conformal symmetry, as well as their active modes in conformal-expansion.</li>
+                <li>Implemented regression models to find expansion coefficients.</li>
+                <li>Achieved successful classification results based on symmetry and was able to correctly classify between two groups of functions with nth mode turned on or off with an accuracy >0.95 for up to 7 modes.</li>
+                <li>Noted that model performance deteriorates rapidly for higher modes and regression models work well only for lower modes.</li>
+            </ul>
+            <h4>Physics-Informed Neural Networks</h4>
+            <ul>
+                <li>Developed a method to solve differential equations using neural networks.</li>
+                <li>Set up the neural network to mimic the function f(x), with x being the input vector (collocation points).</li>
+                <li>Formulated loss functions to account for both the differential equation D f(x) and boundary conditions.</li>
+                <li>Trained the neural network on input points x to minimize the loss functions, providing an approximation to the function f(x) that satisfies the given differential equation.</li>
+            </ul>
+
 
         <h2>Academics</h2>
 
