--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     </nav>
     <main>
         <h1>My Projects</h1>
-    
+        <p>Description and tech stack of anything and everything ever worked on</p>
     </main>
     <footer>
         <p>© [2023], [Pranjal Pandey]</p>
